re-implement single cell pathway analysis
Former-commit-id: 95c83277d813d724320f3a78b90464649da50f92
Former-commit-id: c817909cb6b842bf4592b8ac8c87c220fe372b96
Former-commit-id: 21ca3e6ab9879ba6253f084fbe906e6ce10b3131

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(cca_integrate)
 export(check_gras)
 export(clusterComparison)
 export(clusterComparisonInput)
+export(collapse_sorted)
 export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
@@ -128,6 +129,7 @@ export(preprocess_scseq)
 export(querySignature)
 export(querySignatureInput)
 export(query_drugs)
+export(run_comparison)
 export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
@@ -149,6 +151,8 @@ export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
+export(scPathClusters)
+export(scPathClustersInput)
 export(sc_dl_filename)
 export(scale_fill_names)
 export(scalign_integrate)
