init drug queries for single cell rna-seq
Former-commit-id: 22bfbd130d8e64c39cd6a41bb6c381a1e344d256
Former-commit-id: bd90c23abe57850264e11cad63bf736f326d1256
Former-commit-id: 0719a5175eaba7a6fe555abeab049708039e3bfa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,8 +151,8 @@ export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
-export(scPathClusters)
-export(scPathClustersInput)
+export(scSampleComparison)
+export(scSampleComparisonInput)
 export(sc_dl_filename)
 export(scale_fill_names)
 export(scalign_integrate)
