split l1000 es&pdata by genetic/drugs for #111
Former-commit-id: 57e746db8ec4407ee96f1856e7b42e8842569d53
Former-commit-id: 25e2556881615e97636dbe688c144ad6696f0f2d
Former-commit-id: a03bd75343cfffe10afa9ecb32e07029ed0d47b0

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ inst/indices
 # drug effect size data (new users dl from s3)
 inst/extdata/cmap_es_ind.rds
 inst/extdata/l1000_es.rds
+inst/extdata/l1000_drugs_es.rds
+inst/extdata/l1000_genes_es.rds
 
 # ensdb annotation
 inst/EnsDb
