init L1000 Genetic in Drugs tab; closes #110, closes #111
Former-commit-id: d3b85448801cb167c7d5c8ef88a2212ee0ea92b7
Former-commit-id: 8fb54a3693803a9740b2bb4e6750de8d35b735f4
Former-commit-id: b9ea3c1908a64a55b82360d3a3b186fb44b69895

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ export(querySignature)
 export(querySignatureInput)
 export(query_drugs)
 export(run_comparison)
+export(run_drugs_comparison)
 export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
