--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     ggplot2 (>= 3.1.0),
     Biobase (>= 2.42.0),
     limma (>= 3.40.2),
+    randomcoloR (>= 1.1.0),
     shiny (>= 1.2.0),
     shinyjs (>= 1.0),
     shinyWidgets (>= 0.4.8),
