numerous changes for #112
Changes include:

- show selected genes that are only in CMAP02 as yellow
- show gene choices that are only in CMAP02 with 'CMAP02 ONLY' qualifier

- validate gene selections/custom name
- init running custom queries
- allow selecting previously run custom queries
- show previous genes selections when select previously run custom query


Former-commit-id: 8562e92af9e1bf2496a4f487dc04162a61088554
Former-commit-id: 69bd02aa3b18916cbf4419254736d357b4f90c9b
Former-commit-id: 73a0bf0156342a1cab2268a82099ab11a444ae9f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
 export(construct_path_df)
+export(customQueryForm)
+export(customQueryFormInput)
 export(detect_paired)
 export(diff_expr)
 export(diff_expr_scseq)
@@ -102,6 +104,8 @@ export(limit_cells)
 export(load_bulk_anals)
 export(load_bulk_datasets)
 export(load_cell_ranger_counts)
+export(load_custom_anals)
+export(load_custom_results)
 export(load_kallisto_counts)
 export(load_scseq)
 export(load_scseq_anals)
@@ -128,8 +132,10 @@ export(plot_umap_gene)
 export(preprocess_scseq)
 export(querySignature)
 export(querySignatureInput)
+export(query_budger)
 export(query_drugs)
 export(run_comparison)
+export(run_custom_query)
 export(run_drugs_comparison)
 export(run_drugseqr)
 export(run_kallisto_bulk)
@@ -186,6 +192,7 @@ export(theme_no_yaxis)
 export(toggleAll)
 export(transfer_labels)
 export(tsne_scseq_whitelist)
+export(validate_custom_query)
 export(validate_integration)
 export(validate_pairs)
 export(validate_pdata)
