implement loading CellRanger HDF5 count data
Former-commit-id: 4d835aa6426af7c8aaccf0baa3edf3718c7fea62
Former-commit-id: 0486d679f960e6b80fec72d13452bc932b3d0c3d
Former-commit-id: c3ebd46379f8d2ddb3bcecd153b840ba091c6439

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,10 +27,14 @@ Imports:
     scran (>= 1.12.0),
     scater (>= 1.12.2),
     Seurat (>= 3.0.1),
+    sva,
     magrittr (>= 1.5),
+    Matrix.utils (>= 0.9.7),
     metaMA (>= 3.1.2),
     miniUI (>= 0.1.1.1),
+    mvoutlier (>= 2.0.9),
     DT (>= 0.5),
+    DropletUtils (>= 1.4.3),
     tibble (>= 2.0.1),
     PADOG
 Suggests: 
