--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(get_fastq_id1s)
 export(get_gene_choices)
 export(get_integrated_ambient)
 export(get_knee)
+export(get_label_transfer_choices)
 export(get_open_a)
 export(get_outliers)
 export(get_palette)
@@ -178,6 +179,7 @@ export(selectizeInputWithValidation)
 export(setup_fdata)
 export(showIntegration)
 export(showIntegrationButton)
+export(showLabelTransfer)
 export(srt_to_sce)
 export(stabilize_scseq)
 export(strain_scseq)
