init overwrite previous labels; closes #63
Former-commit-id: cc3e666e1014d47dff6ddd76ca1ed70eb7ac17ec
Former-commit-id: ce70ee4323cacdacef20cd87eca081735b87fd5c
Former-commit-id: 334dfeaf80c45ba2adb50e5847474c9553bd0699

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ export(setup_fdata)
 export(showIntegration)
 export(showIntegrationButton)
 export(showLabelTransfer)
+export(showLabelTransferButton)
 export(srt_to_sce)
 export(stabilize_scseq)
 export(strain_scseq)
