refactor label transfer out of integration related for #63
Former-commit-id: d1e3b5ef1ca2b7996017498977b20e91b6593006
Former-commit-id: 71cbf08b5c7cbed9c90cbb9d2fff8ba44e218a86
Former-commit-id: c43692bb822ef6b619add25dc9011990d255e8ff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_drug_es)
 export(downsample_scseq)
+export(dropdownButton)
 export(dropdownMenuButton)
 export(drugsForm)
 export(drugsFormInput)
@@ -100,6 +101,8 @@ export(integrationForm)
 export(integrationFormInput)
 export(jitter_umap)
 export(justifiedButtonGroup)
+export(labelTransferForm)
+export(labelTransferFormInput)
 export(limit_cells)
 export(load_bulk_anals)
 export(load_bulk_datasets)
