init progress/confirmation dialogues and qc for label transfer; closes #119
Former-commit-id: 715dfac1c0fbb80e18c2e143ca97a12bb62bcb84
Former-commit-id: d0dced6c349f0db334fdad6e20740e87396d3cf8
Former-commit-id: 1813734151671c9cbe99893c6ef50e67d53d16c3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(get_palette)
 export(get_path_df)
 export(get_path_directions)
 export(get_pct_ambient)
+export(get_pred_annot)
 export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
