refactor summarize_compound for drug gene queries #120
Former-commit-id: 17c4381e2a7803ca9e855f0a2a9f9727cdaf6911
Former-commit-id: 268a120c8e98c7ea818bec061f5e354f0e0e42ca
Former-commit-id: 9383efb8328ce57474b3c4c60a6e1d11c44d2fdd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
+export(get_top_cors)
 export(get_tx2gene)
 export(get_wikipedia)
 export(hist_scseq_whitelist)
