right click menu works for 'load as query' #120
Former-commit-id: d44cec9841df2ea5d538c86d7db9dcf756c41364
Former-commit-id: 17ca4bdde45a5d1138d3a3cb3caa5d5eae627ab9
Former-commit-id: 50d38b1ba183833d5b01f51ff0bfcdd0621efd20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(querySignature)
 export(querySignatureInput)
 export(query_budger)
 export(query_drugs)
+export(rightClickMenu)
 export(run_comparison)
 export(run_custom_query)
 export(run_drugs_comparison)
