init logic for right click --> load as query; for #120
Former-commit-id: ca6653820d0b9af9e02e63292ab07be11f0c296e
Former-commit-id: 13a7cb48aa74ba296880e8feebe7513ff19bf4f5
Former-commit-id: ea29c6e1b75f5d2ca1f07b598909dd78691af7d6

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ data-raw/indices*
 data-raw/single-cell/example-anals/GSE1133/*
 data-raw/single-cell/example-anals/sjia/*
 data-raw/single-cell/biogps/U133AGNF1B.gcrma.avg.csv
+data-raw/drug_gene_queries/data/*
 
 # contains PUG-View files from Pubchem
 data-raw/drug_annot/pug_view/views/*
