--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(load_cell_ranger_counts)
 export(load_custom_anals)
 export(load_custom_results)
 export(load_kallisto_counts)
+export(load_pert_anals)
 export(load_saved_scseq)
 export(load_scseq)
 export(load_scseq_anals)
