init MDS plotly for #125
Former-commit-id: 925b57071ad59bf5774b509a785e9b3e29d95a9b
Former-commit-id: 3d68a143520b547f2ebb967c5f657acc2562ba54
Former-commit-id: 9268ce93ac7adea089e583c08d746c27ae38d840

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(dsFormAnalInput)
 export(dsFormInput)
 export(dsFormQuant)
 export(dsFormQuantInput)
+export(dsMDSplotlyUI)
 export(dsPage)
 export(dsPageUI)
 export(dsQuantTable)
