init setup function for new drugseqr app; for #123
Former-commit-id: 2864b9c662bcab753d7a5d87ab14152dd61d3f6a
Former-commit-id: ea453632c69772d8affe7e3836603ee861ab2052
Former-commit-id: 0537c7dd4cc59807ac4aa5ae7ad1c29d3c8c4e8a

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(hist_scseq_whitelist)
 export(id_from_tab)
 export(identify_sc_files)
 export(import_quants)
+export(init_drugseqr)
 export(integrate_saved_scseqs)
 export(integrate_scseqs)
 export(integrationForm)
