seperate getting MDS scaling data and ploting; for #125
Former-commit-id: 404e296736b58d5a9b280efe0e50aa0159933417
Former-commit-id: 93640a9b2b5d6fad854c0506d05c26e12e64f598
Former-commit-id: 7269bea69f2a1efce8ea60080976ad0078934dde

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(get_gene_choices)
 export(get_integrated_ambient)
 export(get_knee)
 export(get_label_transfer_choices)
+export(get_mds)
 export(get_open_a)
 export(get_outliers)
 export(get_palette)
