--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,12 @@ biocViews:
 SystemRequirements:
   kallisto (0.46.0)
 Imports:
+    Biobase (>= 2.42.0),
     dplyr (>= 0.7.8),
     tximport (>= 1.12.0),
     edgeR (>= 3.24.3),
     ggplot2 (>= 3.1.0),
-    Biobase (>= 2.42.0),
+    factoextra (>= 1.0.5),
     limma (>= 3.40.2),
     randomcoloR (>= 1.1.0),
     shiny (>= 1.2.0),
@@ -34,6 +35,7 @@ Imports:
     metaMA (>= 3.1.2),
     miniUI (>= 0.1.1.1),
     mvoutlier (>= 2.0.9),
+    plotly (>= 4.8.0),
     DT (>= 0.5),
     DropletUtils (>= 1.4.3),
     tibble (>= 2.0.1),
@@ -43,9 +45,7 @@ Suggests:
     curl (>= 3.3),
     AnnotationDbi (>= 1.44.0),
     ensembldb (>= 2.8.0),
-    factoextra (>= 1.0.5),
     MASS (>= 7.3.51.1),
-    plotly (>= 4.8.0)
 Depends: 
     R (>= 3.6.0),
     data.table (>= 1.12.0),
