disable mds plot panning
Former-commit-id: 3045fd9bfefced20a34b9812a517a411bfafb0bf
Former-commit-id: f1e8eddc17ebec4321480bc1095f1f217407670a
Former-commit-id: 9f10f8b8f9f6d3d87910cd6ce8f79cb1efca626d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(dsFormAnalInput)
 export(dsFormInput)
 export(dsFormQuant)
 export(dsFormQuantInput)
+export(dsMDSplotly)
 export(dsMDSplotlyUI)
 export(dsPage)
 export(dsPageUI)
@@ -128,7 +129,6 @@ export(pathFormInput)
 export(pathPage)
 export(pathPageUI)
 export(pick_roryk_cutoff)
-export(plotMDS)
 export(plotStyles)
 export(plotStylesButton)
 export(plot_biogps)
@@ -137,6 +137,7 @@ export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
+export(plotlyMDS)
 export(preprocess_scseq)
 export(querySignature)
 export(querySignatureInput)
