--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(diff_expr_scseq)
 export(diff_path)
 export(diff_path_scseq)
 export(dl_10x_whitelists)
+export(dl_pert_result)
 export(downsample_scseq)
 export(dropdownButton)
 export(dropdownMenuButton)
