restore srp_utils and init get_ebi_fastqs for rna-seq benchmarking #127
Former-commit-id: 94d68c91f2f1a37e71aed9e7dc084d7296baa5c8
Former-commit-id: 4240ef49b4ad52646a040b613b9873ed60c573a8
Former-commit-id: ec497bfd5b3f5ac13f56b21b4d8f690ff6421998

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 
 # contains raw IBD FASTQ files for dev purposes
 data-raw/patient_data/*
+data-raw/patient_data/*
 data-raw/single-cell/example-data/*
 !generate_examples.R
 !mds-sva.R
 !mds-sva.png
 
 *.fastq.gz
+data-raw/benchmarks/rnaseq_microarray_cmap/GSE*/*
 data-raw/single-cell/example-anals/GSE1133/*
 data-raw/single-cell/example-anals/sjia/*
 data-raw/single-cell/biogps/U133AGNF1B.gcrma.avg.csv
