--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(ambient.omit)
 export(append_annot)
 export(ascpR)
 export(build_ensdb)
+export(build_ensdb_index)
+export(build_gencode_index)
 export(calcx)
 export(cca_integrate)
 export(check_gras)
@@ -92,6 +94,7 @@ export(get_path_df)
 export(get_path_directions)
 export(get_pct_ambient)
 export(get_pred_annot)
+export(get_salmon_version)
 export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
@@ -157,6 +160,7 @@ export(run_drugseqr)
 export(run_fasterq_dump)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
+export(run_salmon_bulk)
 export(run_umap)
 export(sampleComparison)
 export(sampleComparisonInput)
