init running kallisto or salmon for benchmarking; #128
Former-commit-id: 54bc38f212974b36d260ecbae17ea2bb80d042ba
Former-commit-id: 4c9ede1d6afe4fb6c3582b63f3e2fcfec2cbc403
Former-commit-id: 60b8b515a01d9edaa4d8eb3f44f257783959c47b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,6 @@ export(ambient.omit)
 export(append_annot)
 export(ascpR)
 export(build_ensdb)
-export(build_ensdb_index)
-export(build_gencode_index)
 export(calcx)
 export(cca_integrate)
 export(check_gras)
@@ -93,8 +91,8 @@ export(get_palette)
 export(get_path_df)
 export(get_path_directions)
 export(get_pct_ambient)
+export(get_pkg_version)
 export(get_pred_annot)
-export(get_salmon_version)
 export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
