trying to fix HDF5Array dependency
see https://stackoverflow.com/questions/58378470/how-to-fix-gcc-error-usr-lib64-r-library-rhdf5lib-lib-libhdf5-a-no-such-f

Former-commit-id: b0e04a02e2bbe80a8ba69f1eb5f77ed5644abb4b
Former-commit-id: 6f49d716d164ddfbdcdad50a6e994667aa66f68f
Former-commit-id: e569a0055a30d547e463e1af3559065d603f4c1d

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     scran (>= 1.12.0),
     scater (>= 1.12.2),
     Seurat (>= 3.0.1),
+    HDF5Array (== 1.10.1),
     sva,
     magrittr (>= 1.5),
     Matrix.utils (>= 0.9.7),
