implement loading cellranger single cell data into app
closes #132
What was involved:
  - detects if cellranger by looking for files needed for Seurat::Read10X (check_is_cellranger)
  - renames close matches of filenames for Seurat::Read10X (standardize_cellranger)
  - assumes pre-filtered if minimum counts/droplet is greater than 10
  - no model-building for pre-filtered datasets
  - still filters mitochondrial outliers, PCA outliers, and below knee droplets
  - can't detect ambient outlier genes for pre-filtered datasets as it uses droplets with counts < 10


Former-commit-id: 80cdce64befb5ea6eef4417bbef0275999584283
Former-commit-id: bce1cbe219a5376376663d473d5159d0bcdaf662
Former-commit-id: e9d90c8bdbea315b07757e0c3b0a8e14a1e4c176

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Imports:
     mvoutlier (>= 2.0.9),
     plotly (>= 4.8.0),
     DT (>= 0.5),
+    DropletUtils(>= 1.4.3),
     tibble (>= 2.0.1),
     PADOG
 Suggests: 
