--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,7 +117,7 @@ export(labelTransferFormInput)
 export(limit_cells)
 export(load_bulk_anals)
 export(load_bulk_datasets)
-export(load_cell_ranger_counts)
+export(load_cellranger_counts)
 export(load_custom_anals)
 export(load_custom_results)
 export(load_kallisto_counts)
