migrate srp_utils to GEOfastq
Former-commit-id: 816239854c4f7e855f64cafba5cb1dfe259deb5d
Former-commit-id: 3ea6702ca1b0e4df05f2896bff6f422511bfef25
Former-commit-id: 7684594e7489aa560bb8eb42124c89cabaf8b909

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,10 +42,9 @@ Imports:
     PADOG
 Suggests: 
     testthat,
-    curl (>= 3.3),
     AnnotationDbi (>= 1.44.0),
     ensembldb (>= 2.8.0),
-    MASS (>= 7.3.51.1),
+    MASS (>= 7.3.51.1)
 Depends: 
     R (>= 3.6.0),
     data.table (>= 1.12.0),
