--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,11 @@ export(advancedOptions)
 export(advancedOptionsInput)
 export(ambient.omit)
 export(append_annot)
-export(ascpR)
 export(build_ensdb)
 export(calcx)
 export(cca_integrate)
 export(check_gras)
+export(check_is_cellranger)
 export(clusterComparison)
 export(clusterComparisonInput)
 export(collapse_sorted)
@@ -71,15 +71,12 @@ export(get_cluster_choices)
 export(get_contrast_choices)
 export(get_cors_html)
 export(get_diverge)
-export(get_dldir)
 export(get_dprimes)
 export(get_drugbank)
 export(get_drugs_table)
-export(get_ebi_fastqs)
 export(get_ensdb_package)
 export(get_exclude_choices)
 export(get_fastq_id1s)
-export(get_fastqs)
 export(get_gene_choices)
 export(get_integrated_ambient)
 export(get_knee)
@@ -96,7 +93,6 @@ export(get_pred_annot)
 export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
-export(get_srp_meta)
 export(get_top)
 export(get_top_cors)
 export(get_tx2gene)
@@ -155,7 +151,6 @@ export(run_comparison)
 export(run_custom_query)
 export(run_drugs_comparison)
 export(run_drugseqr)
-export(run_fasterq_dump)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_salmon_bulk)
@@ -201,6 +196,7 @@ export(showLabelTransfer)
 export(showLabelTransferButton)
 export(srt_to_sce)
 export(stabilize_scseq)
+export(standardize_cellranger)
 export(strain_scseq)
 export(summarize_compound)
 export(tabPane)
