--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ data-raw/single-cell/alevin-args/*.gz
 data-raw/single-cell/kallisto-args/*
 
 data-raw/single-cell/reference-data/*
+packrat/lib*/
+packrat/src/
