--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose RNA-Seq Gene Expression Signatures.
-Version: 0.1.0
+Version: 0.1.3
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: More about what it does (maybe more than one line)
@@ -39,17 +39,16 @@ Imports:
     DT (>= 0.5),
     DropletUtils(>= 1.4.3),
     tibble (>= 2.0.1),
+    MASS (>= 7.3.51.1),
     PADOG,
     drugseqr.data
 Suggests: 
     testthat,
     AnnotationDbi (>= 1.44.0),
-    ensembldb (>= 2.8.0),
-    MASS (>= 7.3.51.1)
+    ensembldb (>= 2.8.0)
 Depends: 
     R (>= 3.6.0),
-    data.table (>= 1.12.0),
-    shinyBS(>= 0.61)
+    data.table (>= 1.12.0)
 Remotes: 
     alexvpickering/PADOG,
     hms-dbmi/drugseqr.data
