--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,7 +1,7 @@
 preserve_logs true;
 
 # Instruct Shiny Server to run applications as the user "shiny"
-run_as shiny;
+run_as docker;
 
 # Define a server that listens on port 3838
 server {
