implement labels comparison plots; closes #135
shows plots with original cell/labels for up to two datasets within an integrated dataset. Cluster colors are from the closest cluster in the integrated dataset. Coordinates are from post-integration.


Former-commit-id: bce3eb9ef246810afa29925d5d84586cef0235a5 [formerly 1584a7c93ad5bf49749914bc48d61aad5f083eca]
Former-commit-id: 5daaa1156aaf5a10e7caefd4d507234c30f48d3b
Former-commit-id: eea23d830ca6488f6c6a62c72ee03f966bf6ea0b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(get_integrated_ambient)
 export(get_knee)
 export(get_label_transfer_choices)
 export(get_mds)
+export(get_nearest_row)
 export(get_open_a)
 export(get_outliers)
 export(get_palette)
@@ -183,6 +184,8 @@ export(select_contrast)
 export(select_pairs)
 export(selectedAnal)
 export(selectedAnalInput)
+export(selectedAnnot)
+export(selectedAnnotDatasetInput)
 export(selectedDrugStudy)
 export(selectedDrugStudyInput)
 export(selectedGene)
