download perturbation signatures as needed from AWS; closes #137
Former-commit-id: 0c11cd1605146ab9e54e8a8cbcf3e4c7cf7bb4d4 [formerly 9b3401c0edf3419779da2178c1c2192213d19749]
Former-commit-id: b5d52ae03c74b5e810a99301948dd76635d931fe
Former-commit-id: 82d1d5f27b19ef27051d2fb7f753602ef3813432

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # contains raw IBD FASTQ files for dev purposes
 data-raw/patient_data/*
 data-raw/patient_data/*
+data-raw/drug_es/signatures/*
 !generate_examples.R
 !mds-sva.R
 !mds-sva.png
