--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(diff_path)
 export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_pert_result)
+export(dl_pert_signature)
 export(downsample_scseq)
 export(dropdownButton)
 export(dropdownMenuButton)
@@ -119,6 +120,7 @@ export(load_custom_anals)
 export(load_custom_results)
 export(load_kallisto_counts)
 export(load_pert_anals)
+export(load_pert_signature)
 export(load_saved_scseq)
 export(load_scseq)
 export(load_scseq_anals)
@@ -132,6 +134,8 @@ export(pathForm)
 export(pathFormInput)
 export(pathPage)
 export(pathPageUI)
+export(pathPert)
+export(pathPertInput)
 export(pick_roryk_cutoff)
 export(plotStyles)
 export(plotStylesButton)
