--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     plotly (>= 4.8.0),
     DT (>= 0.5),
     DropletUtils(>= 1.4.3),
+    DESeq2 (>= 1.24.0),
     tibble (>= 2.0.1),
     MASS (>= 7.3.51.1),
     PADOG,
