init normalized counts plot in Datasets tab; closes #138
Former-commit-id: 18cd071526167407bf9caadd356d89fcee3ffac4 [formerly 8344410e63b5081a178190dbffbe455c018ad8db]
Former-commit-id: 8069a2b031b84a3c82b493172bd817dda0015a30
Former-commit-id: 897bc189c4f59af4bcf12cb2d708b6083a61b797

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(add_table_html)
 export(advancedOptions)
 export(advancedOptionsInput)
 export(ambient.omit)
+export(analysisTypeToggle)
 export(append_annot)
 export(build_ensdb)
 export(calcx)
@@ -47,16 +48,18 @@ export(dsDataset)
 export(dsDatasetInput)
 export(dsEndType)
 export(dsEndTypeInput)
+export(dsExploreTable)
 export(dsForm)
 export(dsFormAnal)
 export(dsFormAnalInput)
 export(dsFormInput)
 export(dsFormQuant)
 export(dsFormQuantInput)
+export(dsGenePlotly)
 export(dsMDSplotly)
-export(dsMDSplotlyUI)
 export(dsPage)
 export(dsPageUI)
+export(dsPlotlyUI)
 export(dsQuantTable)
 export(dsTable)
 export(exist_clusters)
@@ -145,6 +148,7 @@ export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
+export(plotlyGene)
 export(plotlyMDS)
 export(preprocess_scseq)
 export(querySignature)
