--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(construct_eset)
 export(construct_path_df)
 export(customQueryForm)
 export(customQueryFormInput)
+export(deconvolutionForm)
+export(deconvolutionFormInput)
 export(detect_paired)
 export(diff_expr)
 export(diff_expr_scseq)
