implement dtangle plot; update app for ee89c7f
Former-commit-id: 7e9fa28646e3755eb54feb1db876ee7da3eb8398 [formerly 82f3647bb4dd23bbad4f78a5b79b1a0019311258]
Former-commit-id: d623a392d0f16a01256e72267051ae82ae9a384a
Former-commit-id: bf143770193393a659e380425648a319ce56cc0c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_project_scseqs)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
 export(add_table_html)
+export(add_vsd)
 export(advancedOptions)
 export(advancedOptionsInput)
 export(ambient.omit)
@@ -26,8 +27,6 @@ export(construct_eset)
 export(construct_path_df)
 export(customQueryForm)
 export(customQueryFormInput)
-export(deconvolutionForm)
-export(deconvolutionFormInput)
 export(detect_paired)
 export(diff_expr)
 export(diff_expr_scseq)
@@ -46,6 +45,7 @@ export(drugsPageUI)
 export(drugsTable)
 export(drugsTableOutput)
 export(dsAnalTable)
+export(dsCellsPlotly)
 export(dsDataset)
 export(dsDatasetInput)
 export(dsEndType)
@@ -64,6 +64,8 @@ export(dsPageUI)
 export(dsPlotlyUI)
 export(dsQuantTable)
 export(dsTable)
+export(dtangleForm)
+export(dtangleFormInput)
 export(exist_clusters)
 export(fit_ebayes_scseq)
 export(format_sample_gene_plot)
@@ -74,6 +76,7 @@ export(get_ambient)
 export(get_cell_choices)
 export(get_cell_pcts)
 export(get_cluster_choices)
+export(get_cluster_stats)
 export(get_contrast_choices)
 export(get_cors_html)
 export(get_diverge)
@@ -150,6 +153,7 @@ export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
+export(plotlyCells)
 export(plotlyGene)
 export(plotlyMDS)
 export(preprocess_scseq)
