multiple bug fixes; prep for release
Former-commit-id: 1d15d2c36d72e2016935f5fd8aca9de2859f45ef [formerly f819835910da4424154bb764750cb9bcd3ddae8c]
Former-commit-id: 11f7ddcaf176b988411075b62c53a0c27478892b
Former-commit-id: d2fadd9ec431f5ddcab9e1b63ec2ba7519d7419f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(get_fastq_id1s)
 export(get_gene_choices)
 export(get_integrated_ambient)
 export(get_knee)
+export(get_label_plot)
 export(get_label_transfer_choices)
 export(get_mds)
 export(get_nearest_row)
