--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     DT (>= 0.5),
     DropletUtils(>= 1.4.3),
     DESeq2 (>= 1.24.0),
+    dtangle (>= 0.3.1),
     tibble (>= 2.0.1),
     MASS (>= 7.3.51.1),
     PADOG,
