update man pages
Former-commit-id: d7e14518e0fbdd301daa82fe8e1ca88b8a5ea86d [formerly 84fd8f6f18d3edf035a613ebb09ffcfcaaa71167]
Former-commit-id: b9ffaaa92b9a9d64b420b2e629250c92d5ff247c
Former-commit-id: 0f3cfc9769454d07b02c917dc574653de36c2497

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ inst/app/tests/data/test/*
 
 # until shinytest works
 inst/app/tests/data/static/*
+inst/app/tests/shinytests/*
 
 # txp2gene for alevin
 data-raw/single-cell/alevin-args/*.gz
