--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_pert_result)
 export(dl_pert_signature)
+export(downloadablePlot)
+export(downloadablePlotUI)
 export(downsample_scseq)
 export(dropdownButton)
 export(dropdownMenuButton)
