refactor genePlotly and cellsPlotly to reuse boxplot code portion
Former-commit-id: 244211835068698bf999f34d63553c1217b988b3 [formerly 7e503e4b450c31d1e1c853360e3fb887bd09f81e]
Former-commit-id: ffcd96b83cf2ec55676d99104135a9279c8ad1d4
Former-commit-id: b07c3da666bd6b1854ef6c14e900bcc4a8ab721e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(dl_pert_result)
 export(dl_pert_signature)
 export(downloadablePlot)
 export(downloadablePlotUI)
+export(downloadablePlotly)
+export(downloadablePlotlyUI)
 export(downsample_scseq)
 export(dropdownButton)
 export(dropdownMenuButton)
@@ -75,6 +77,8 @@ export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
 export(get_ambient)
+export(get_boxplotly_cell_args)
+export(get_boxplotly_gene_args)
 export(get_cell_choices)
 export(get_cell_pcts)
 export(get_cluster_choices)
@@ -110,6 +114,8 @@ export(get_top)
 export(get_top_cors)
 export(get_tx2gene)
 export(get_wikipedia)
+export(hiddenDownload)
+export(hiddenDownloadUI)
 export(hist_scseq_whitelist)
 export(id_from_tab)
 export(identify_sc_files)
@@ -156,8 +162,6 @@ export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_umap_cluster)
 export(plot_umap_gene)
-export(plotlyCells)
-export(plotlyGene)
 export(plotlyMDS)
 export(preprocess_scseq)
 export(querySignature)
