fix ggplot dl button styling; version bump for next release
Former-commit-id: 6ab2830261e21b9361e39c060fb2b8d6553d73a7 [formerly 0966b3b73031bc9bc1852d9784c05cf9dd3151b0]
Former-commit-id: 5d02eebf971ef2a8cefcfa6a2405ccfbfa694b87
Former-commit-id: 06aaad2f6a8cc5f57b0023fa752d8bd6dfb52bed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose RNA-Seq Gene Expression Signatures.
-Version: 0.1.8
+Version: 0.1.9
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: More about what it does (maybe more than one line)
@@ -23,6 +23,7 @@ Imports:
     limma (>= 3.40.2),
     randomcoloR (>= 1.1.0),
     shiny (>= 1.2.0),
+    shinyBS (>= 0.61),
     shinyjs (>= 1.0),
     shinyWidgets (>= 0.4.8),
     shinyFiles (>= 0.7.3),
