fixes bug that overwrites exploratory pdata when changing datasets
Former-commit-id: e316684492ba28a08ab74e30660999e1f1be52e4 [formerly d6e346878993500df9b5f79311acb587150fa696]
Former-commit-id: 4329573841153138b2958cc6cbb80d1f8d45269d
Former-commit-id: 0f4eae829fa340b2173771b549c1d6f652cfff0b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(advancedOptionsInput)
 export(ambient.omit)
 export(analysisTypeToggle)
 export(append_annot)
+export(boxPlotly)
 export(build_ensdb)
 export(calcx)
 export(cca_integrate)
