init UI for docs section #147
Former-commit-id: d6d67f22fc7ffbf9227e9aa633a6554ea0f15109 [formerly 8da34e34d2dce6fa47f8bf13dff915cada78f401]
Former-commit-id: 936901aa56548d92c449e608aaca9945ffb13e40
Former-commit-id: 8de2965a3353af2435741690d6dcfa33fa256940

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,10 @@ export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_pert_result)
 export(dl_pert_signature)
+export(docsPageUI)
+export(docsSection)
+export(docsSideNav)
+export(docsSubsection)
 export(downloadablePlot)
 export(downloadablePlotUI)
 export(downloadablePlotly)
@@ -72,6 +76,7 @@ export(dsTable)
 export(dtangleForm)
 export(dtangleFormInput)
 export(exist_clusters)
+export(extract_section_info)
 export(fit_ebayes_scseq)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
