--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ export(querySignature)
 export(querySignatureInput)
 export(query_budger)
 export(query_drugs)
+export(remove_sva)
 export(rightClickMenu)
 export(run_comparison)
 export(run_custom_query)
