new differential expression analysis pattern works
for #152 and #153. Also rename Datasets tab to Bulk for #151

diff_expr pattern changes:
 - surrogate variables are calculated on all labeled samples instead of just test-ctrl group
	> more statistically appropriate
 - duplicateCorrelation is used for limma when paired samples
 - ebayes gets run on all labeled samples instead of just test-ctrl group
	> more appropriate as improves estimate for experiment wide variance
 - number of surrogate variables can be specified and is based on inspection of experiment-wide MDS plots
	> can use to avoid modeling out biologically relevant variation


Former-commit-id: 0a0b98fedef9651d3e5aa1aceed9192948efd994 [formerly 2ccb5369889d96e917478877c0ddae588dfbe4d1]
Former-commit-id: a0d6cb58ae43a4e0ccf22edf55f539ed96ce2845
Former-commit-id: e3fe10fc397f86cb2e5ac929443ddb53b8089358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,12 +58,12 @@ export(drugsPert)
 export(drugsPertInput)
 export(drugsTable)
 export(drugsTableOutput)
-export(dsAnalTable)
 export(dsCellsPlotly)
 export(dsDataset)
 export(dsDatasetInput)
 export(dsEndType)
 export(dsEndTypeInput)
+export(dsExploreMDSplotly)
 export(dsExploreTable)
 export(dsForm)
 export(dsFormAnal)
@@ -72,7 +72,6 @@ export(dsFormInput)
 export(dsFormQuant)
 export(dsFormQuantInput)
 export(dsGenePlotly)
-export(dsMDSplotly)
 export(dsPage)
 export(dsPageUI)
 export(dsPlotlyUI)
@@ -179,6 +178,7 @@ export(querySignature)
 export(querySignatureInput)
 export(query_budger)
 export(query_drugs)
+export(remove_dataset_files)
 export(remove_sva)
 export(rightClickMenu)
 export(run_comparison)
@@ -237,6 +237,7 @@ export(stabilize_scseq)
 export(standardize_cellranger)
 export(strain_scseq)
 export(summarize_compound)
+export(svaButton)
 export(tabPane)
 export(textInputWithButtons)
 export(textInputWithValidation)
