bug fixes and improved caching for duplicateCorrelation
Former-commit-id: 3bad6cffdfc6bf893867aeb6c6560fb4dabfbce6 [formerly f1af729e79257a8ae6405c73109a64d4f39bcc06]
Former-commit-id: 072573a48a63e475924725a7e3442faa32528fb1
Former-commit-id: fc0352fbd3b9465ef8e1d085592b4893de79f996

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(add_vsd)
 export(advancedOptions)
 export(advancedOptionsInput)
 export(ambient.omit)
-export(analysisTypeToggle)
 export(append_annot)
 export(boxPlotly)
 export(build_ensdb)
@@ -63,7 +62,6 @@ export(dsDataset)
 export(dsDatasetInput)
 export(dsEndType)
 export(dsEndTypeInput)
-export(dsExploreMDSplotly)
 export(dsExploreTable)
 export(dsForm)
 export(dsFormAnal)
@@ -72,6 +70,7 @@ export(dsFormInput)
 export(dsFormQuant)
 export(dsFormQuantInput)
 export(dsGenePlotly)
+export(dsMDSplotly)
 export(dsPage)
 export(dsPageUI)
 export(dsPlotlyUI)
@@ -188,6 +187,7 @@ export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_salmon_bulk)
+export(run_sva)
 export(run_umap)
 export(sampleComparison)
 export(sampleComparisonInput)
