--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(ambient.omit)
 export(append_annot)
 export(boxPlotly)
 export(build_ensdb)
+export(bulkAnal)
+export(bulkAnalInput)
 export(calcx)
 export(cca_integrate)
 export(check_gras)
@@ -29,7 +31,6 @@ export(construct_path_df)
 export(customQueryForm)
 export(customQueryFormInput)
 export(detect_paired)
-export(diff_expr)
 export(diff_expr_scseq)
 export(diff_path)
 export(diff_path_scseq)
@@ -79,7 +80,9 @@ export(dsTable)
 export(dtangleForm)
 export(dtangleFormInput)
 export(exist_clusters)
+export(exploreEset)
 export(extract_section_info)
+export(fit_ebayes)
 export(fit_ebayes_scseq)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
@@ -122,6 +125,7 @@ export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
 export(get_top_cors)
+export(get_top_table)
 export(get_tx2gene)
 export(get_wikipedia)
 export(hiddenDownload)
@@ -151,7 +155,7 @@ export(load_pert_anals)
 export(load_pert_signature)
 export(load_saved_scseq)
 export(load_scseq)
-export(load_scseq_anals)
+export(load_scseq_datasets)
 export(load_scseq_qcgenes)
 export(load_scseqs_for_integration)
 export(load_seq)
@@ -173,10 +177,10 @@ export(plot_umap_cluster)
 export(plot_umap_gene)
 export(plotlyMDS)
 export(preprocess_scseq)
-export(querySignature)
 export(querySignatureInput)
 export(query_budger)
 export(query_drugs)
+export(remove_bulk_anals)
 export(remove_dataset_files)
 export(remove_sva)
 export(rightClickMenu)
@@ -186,6 +190,7 @@ export(run_drugs_comparison)
 export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
+export(run_limma)
 export(run_salmon_bulk)
 export(run_sva)
 export(run_umap)
