--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,16 +177,14 @@ export(plot_umap_cluster)
 export(plot_umap_gene)
 export(plotlyMDS)
 export(preprocess_scseq)
-export(querySignatureInput)
 export(query_budger)
 export(query_drugs)
 export(remove_bulk_anals)
 export(remove_dataset_files)
 export(remove_sva)
 export(rightClickMenu)
-export(run_comparison)
 export(run_custom_query)
-export(run_drugs_comparison)
+export(run_drug_queries)
 export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
@@ -201,6 +199,7 @@ export(save_bulk_dataset)
 export(save_combined_scseq_reports)
 export(save_scseq_data)
 export(save_scseq_reports)
+export(scAnalInput)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
 export(scClusterPlot)
@@ -212,7 +211,6 @@ export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
 export(scSampleComparison)
-export(scSampleComparisonInput)
 export(sc_dl_filename)
 export(scale_fill_names)
 export(scalign_integrate)
