--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ export(construct_path_df)
 export(customQueryForm)
 export(customQueryFormInput)
 export(detect_paired)
-export(diff_expr_scseq)
 export(diff_path)
 export(diff_path_scseq)
 export(dl_10x_whitelists)
@@ -83,7 +82,7 @@ export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
 export(fit_ebayes)
-export(fit_ebayes_scseq)
+export(fit_lm_scseq)
 export(format_sample_gene_plot)
 export(geom_hist_whitelist)
 export(geom_tsne)
@@ -99,6 +98,7 @@ export(get_contrast_choices)
 export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
+export(get_drug_paths)
 export(get_drugbank)
 export(get_drugs_table)
 export(get_ensdb_package)
@@ -189,6 +189,7 @@ export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_limma)
+export(run_lmfit_scseq)
 export(run_salmon_bulk)
 export(run_sva)
 export(run_umap)
@@ -199,6 +200,7 @@ export(save_bulk_dataset)
 export(save_combined_scseq_reports)
 export(save_scseq_data)
 export(save_scseq_reports)
+export(scAnal)
 export(scAnalInput)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
@@ -211,6 +213,8 @@ export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
 export(scSampleComparison)
+export(scSelectedAnal)
+export(scSelectedAnalInput)
 export(sc_dl_filename)
 export(scale_fill_names)
 export(scalign_integrate)
