change Dataset filename references to Bulk Data
Former-commit-id: 36606abcda06648a4dcaebdd5edef4afb310f6dd [formerly f378b430dda14875ccca301cdede7c240d31de4f]
Former-commit-id: f8cdebe9ed17ca4b0e79545f9c027b5db302007f
Former-commit-id: a847de2ae6dd622a5dd22520cdda1178fc59394e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,25 @@ export(boxPlotly)
 export(build_ensdb)
 export(bulkAnal)
 export(bulkAnalInput)
+export(bulkCellsPlotly)
+export(bulkDataset)
+export(bulkDatasetInput)
+export(bulkEndType)
+export(bulkEndTypeInput)
+export(bulkExploreTable)
+export(bulkForm)
+export(bulkFormAnal)
+export(bulkFormAnalInput)
+export(bulkFormInput)
+export(bulkFormQuant)
+export(bulkFormQuantInput)
+export(bulkGenePlotly)
+export(bulkMDSplotly)
+export(bulkPage)
+export(bulkPageUI)
+export(bulkPlotlyUI)
+export(bulkQuantTable)
+export(bulkTable)
 export(calcx)
 export(cca_integrate)
 export(check_gras)
@@ -57,25 +76,6 @@ export(drugsPert)
 export(drugsPertInput)
 export(drugsTable)
 export(drugsTableOutput)
-export(dsCellsPlotly)
-export(dsDataset)
-export(dsDatasetInput)
-export(dsEndType)
-export(dsEndTypeInput)
-export(dsExploreTable)
-export(dsForm)
-export(dsFormAnal)
-export(dsFormAnalInput)
-export(dsFormInput)
-export(dsFormQuant)
-export(dsFormQuantInput)
-export(dsGenePlotly)
-export(dsMDSplotly)
-export(dsPage)
-export(dsPageUI)
-export(dsPlotlyUI)
-export(dsQuantTable)
-export(dsTable)
 export(dtangleForm)
 export(dtangleFormInput)
 export(exist_clusters)
