refactor single cell limma fitting
for gene plots show adjusted data if surrogate variables selected


Former-commit-id: 122f89da46f9a66abeae64d7c7439a3b1967e826 [formerly 4a0f439baed5e6f972ba854a431ac567fe03291f]
Former-commit-id: a95dd714f83347be8668edd9cccb88251d02b21f
Former-commit-id: a8ce7b80b12319bea736330743f9eab0cdc632b7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,6 +189,7 @@ export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_limma)
+export(run_limma_scseq)
 export(run_lmfit_scseq)
 export(run_salmon_bulk)
 export(run_sva)
