use scAnal module in Single Cell tab
scAnal used for Drugs and Pathways tab as well. Eliminates duplicated code


Former-commit-id: a0a19a7e626c6f06c4fc9c4709a07682c74299a9 [formerly 04919374f95361e831eeb1591ee0ca119a79b6ae]
Former-commit-id: c8b0606f2ba3d74f757d53b5a27474b9ebe7f40d
Former-commit-id: 944907d1fa01eac5b5ceace82bec8372006d95ac

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,8 +194,6 @@ export(run_lmfit_scseq)
 export(run_salmon_bulk)
 export(run_sva)
 export(run_umap)
-export(sampleComparison)
-export(sampleComparisonInput)
 export(save_bulk_anals)
 export(save_bulk_dataset)
 export(save_combined_scseq_reports)
@@ -214,8 +212,8 @@ export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
 export(scSampleComparison)
-export(scSelectedAnal)
-export(scSelectedAnalInput)
+export(scSelectedDataset)
+export(scSelectedDatasetInput)
 export(sc_dl_filename)
 export(scale_fill_names)
 export(scalign_integrate)
