get group colors/levels into function; heatmap for Pathways
Former-commit-id: d726312b397a34a5a2dc8ecf5c3f07a80a2a330b [formerly 455859b51631ed91e1270dfaf6de47c38c2edc23]
Former-commit-id: e45af18e3ca6c86458087762ed19a10cef87b9a4
Former-commit-id: 9b23b6f817a03eb7528c6960a213518cb865db85

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(downloadablePlotUI)
 export(downloadablePlotly)
 export(downloadablePlotlyUI)
 export(downsample_scseq)
+export(dprimesPlotly)
 export(dropdownButton)
 export(dropdownMenuButton)
 export(drugsForm)
@@ -105,6 +106,8 @@ export(get_ensdb_package)
 export(get_exclude_choices)
 export(get_fastq_id1s)
 export(get_gene_choices)
+export(get_group_colors)
+export(get_group_levels)
 export(get_integrated_ambient)
 export(get_knee)
 export(get_label_plot)
