--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_adjusted)
 export(add_es)
+export(add_hvgs)
 export(add_integrated_ambient)
 export(add_linkout)
 export(add_project_scseqs)
@@ -120,6 +121,7 @@ export(get_outliers)
 export(get_palette)
 export(get_path_df)
 export(get_path_directions)
+export(get_pathway_heatmap)
 export(get_pct_ambient)
 export(get_pkg_version)
 export(get_pred_annot)
@@ -164,7 +166,6 @@ export(load_scseqs_for_integration)
 export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
-export(norm_scseq)
 export(pathForm)
 export(pathFormInput)
 export(pathPage)
@@ -176,12 +177,13 @@ export(plot_biogps)
 export(plot_combined_scseq_report)
 export(plot_scseq_barplot)
 export(plot_scseq_report)
-export(plot_umap_cluster)
+export(plot_tsne_cluster)
 export(plot_umap_gene)
 export(plotlyMDS)
 export(preprocess_scseq)
 export(query_budger)
 export(query_drugs)
+export(reduce_dims)
 export(remove_bulk_anals)
 export(remove_dataset_files)
 export(remove_sva)
@@ -241,7 +243,6 @@ export(showIntegrationButton)
 export(showLabelTransfer)
 export(showLabelTransferButton)
 export(srt_to_sce)
-export(stabilize_scseq)
 export(standardize_cellranger)
 export(strain_scseq)
 export(summarize_compound)
