--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,7 +93,6 @@ export(get_ambient)
 export(get_boxplotly_cell_args)
 export(get_boxplotly_gene_args)
 export(get_cell_choices)
-export(get_cell_pcts)
 export(get_cluster_choices)
 export(get_cluster_stats)
 export(get_contrast_choices)
@@ -178,7 +177,7 @@ export(plot_combined_scseq_report)
 export(plot_scseq_barplot)
 export(plot_scseq_report)
 export(plot_tsne_cluster)
-export(plot_umap_gene)
+export(plot_tsne_gene)
 export(plotlyMDS)
 export(preprocess_scseq)
 export(query_budger)
