clean up marker/hvg
Former-commit-id: c4b0727c11fdcfc3d89b886dc67ddd02a352aede [formerly 7f163927591c07ffe31af60c34d0612afab53b46]
Former-commit-id: 6e2f4228478079da43464682f6fbc560908172af
Former-commit-id: c41a0f24bc13db0efa2288e174f63e440bf39939

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(load_scseqs_for_integration)
 export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
+export(normalize_scseq)
 export(pathForm)
 export(pathFormInput)
 export(pathPage)
@@ -179,7 +180,6 @@ export(plot_scseq_report)
 export(plot_tsne_cluster)
 export(plot_tsne_gene)
 export(plotlyMDS)
-export(preprocess_scseq)
 export(query_budger)
 export(query_drugs)
 export(reduce_dims)
