gene and label plots working for SCE changeover
Former-commit-id: c0b7f94def5be97dc39fa594b970865755414681 [formerly bbbe0bf5c44a356a407461f8c31396b99473b2f6]
Former-commit-id: fec260e28c7847b6f37303c9a5778cbe8a4680d2
Former-commit-id: 4422c1eb955b4fbd4fbb01ee09fa31bb48d598ca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_es)
 export(add_hvgs)
 export(add_integrated_ambient)
 export(add_linkout)
+export(add_pcan)
 export(add_project_scseqs)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
@@ -253,7 +254,6 @@ export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
 export(toggleAll)
-export(transfer_labels)
 export(tsne_scseq_whitelist)
 export(validate_custom_query)
 export(validate_integration)
