fix two-group comparisons for SCE
Former-commit-id: a51e1d5d9a39e3ded7b280946396fb7d34aa41ae [formerly 8ee4f80aa64f9ae29e0a15065fa18ae2211b5efa]
Former-commit-id: 34618e20e8cf088607c9e82fa021c69618e2c7aa
Former-commit-id: 91e5de8f311e941d0bddcef853d9f540376115c4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(add_es)
 export(add_hvgs)
 export(add_integrated_ambient)
 export(add_linkout)
-export(add_pcan)
 export(add_project_scseqs)
+export(add_redn)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
 export(add_table_html)
